--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>NFC hello!</h1>
+  <h1>NFC hello!!!!!</h1>
   <button type="button" id="read">read</button>
-  <button type="button" onclick="writeTag()">write</button>
+  <button type="button" id="write">write</button>
 
   <script src="/app.js"></script>
 </body>
