--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
   <h1>NFC hello!!!!!</h1>
-  <button type="button" id="read">read</button>
+
+  <input type="text" id="text">
   <button type="button" id="write">write</button>
+  <button type="button" id="read">read</button>
 
   <script src="/app.js"></script>
 </body>
